# doc-ledger

./: .gitignore  README.md  pyproject.toml
doc_ledger/: __init__.py  path_format.py  reconcile.py  scan.py
docs/: README.md  configuration.md  testing-and-fixtures.md  watcher-and-automation.md
docs_index/: __init__.py  cli.py  readme_io.py  reconcile.py  watch.py
tests/: test_cli.py  test_path_format.py  test_readme_io.py  test_reconcile.py  test_scan.py  test_watch.py
