[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-ledger"
version = "0.1.1"
description = "Reconcile local index files with a file tree."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Brian Fernstrom" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["documentation", "index", "filesystem", "cli"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "tomlkit",
  "watchdog",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
doc-ledger = "doc_ledger.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["doc_ledger*"]
